Configure Rizzler with Gemini and final UI polish for deployment

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,9 @@
 *.css merge=rizzler
 *.html merge=rizzler
 *.md merge=rizzler
+
+# Additional configuration from rizzler
+*.ts,tsx,js,jsx,css merge=rizzler
+
+# Additional configuration from rizzler
+*.ts,tsx,js,jsx,css merge=rizzler
